# Zero2Prod

./: Cargo.toml
scripts/: init_db.sh
src/: lib.rs  main.rs
src/routes/: health_check.rs  mod.rs
tests/: health_check.rs
